omim - solve 'm-dialog' and 'm-radio' css 'transition', 'z-index: 0' conflict

--- a/packages/omim/demos/dialog/material.scss
+++ b/packages/omim/demos/dialog/material.scss
@@ -1,6 +1,5 @@
 @import "../../src/theme";
 @import "@material/list/mdc-list";
-@import "@material/radio/mdc-radio";
 
 .m-list-radio {
     padding: 0;
@@ -16,3 +15,12 @@
     height: 100%;
     line-height: 48px;
 }
+
+// .mdc-radio__native-control {
+//     z-index: 0;
+// }
+
+// .mdc-radio__background::before {
+//     // transition: opacity 120ms 0ms cubic-bezier(0.4, 0, 0.6, 1), transform 120ms 0ms cubic-bezier(0.4, 0, 0.6, 1);
+//     transition: auto;
+// }
